webnodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb
  namespace: azaabar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
      - name: webnodb
        image: azerzaa/flask-net4255:ch4
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
