webdb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webdb
  namespace: azaabar
spec:
  type: ClusterIP
  selector:
    app: webdb
  ports:
  - port: 5000
    targetPort: 5000
